--- a/frontend/mt-node/src/styles.scss
+++ b/frontend/mt-node/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~ngx-toastr/toastr';
 
 $greenColor: #57baa9;
 $darkGreenColor: #30885f;
