bp::frontend integrated

--- a/frontend/mt-node/src/app/category/add-category/add-category.component.html
+++ b/frontend/mt-node/src/app/category/add-category/add-category.component.html
@@ -1,7 +1,7 @@
 <div class="dialog">
     <div class="dialog-header">
         <h2>Add Category</h2>
-        
+
     </div>
     <mat-divider ></mat-divider>
     <div class="dialog-body">
@@ -11,7 +11,7 @@
                     <p>
                         <mat-label>Category Name</mat-label>
                         <mat-form-field class="w-100" appearance="outline">
-                            <input matInput placeholder="Add a category" formControlName="categoryName" autocomplete="false">
+                            <input matInput placeholder="Add a category" formControlName="name" autocomplete="false">
                             <mat-error>Category name required</mat-error>
                         </mat-form-field>
                     </p>
