--- a/frontend/mt-node/src/app/category/category-list/category-list.component.html
+++ b/frontend/mt-node/src/app/category/category-list/category-list.component.html
@@ -29,11 +29,11 @@
                     </tr> -->
 
                     <tr *ngFor="let item of categoryList">
-                        <td>{{item.categoryID}}</td>
-                        <td>{{item.categoryName}}</td>
+                        <td>{{item.id}}</td>
+                        <td>{{item.name}}</td>
                         <td class="d-flex justify-content-evenly">
                             <button type="button" class="btn btn-outline-green rounded-pill" (click)="editCategory(item)">Edit</button>
-                            <button type="button" class="btn btn-outline-green rounded-pill" (click)="deleteCategory(item.categoryID)">Delete</button>
+                            <button type="button" class="btn btn-outline-green rounded-pill" (click)="deleteCategory(item.id)">Delete</button>
                         </td>
                     </tr>
                 </tbody>
