--- a/frontend/mt-node/src/app/products/product-list/product-list.component.html
+++ b/frontend/mt-node/src/app/products/product-list/product-list.component.html
@@ -15,7 +15,7 @@
                     <tr>
                         <th scope="col">Product Id</th>
                         <th scope="col">Product Name</th>
-                        <th scope="col">Category Id</th>
+                        <!-- <th scope="col">Category Id</th> -->
                         <th scope="col">Category Name</th>
                         <th scope="col" class="text-center">Actions</th>
                     </tr>
@@ -23,13 +23,13 @@
                 <tbody>
 
                     <tr *ngFor="let item of productList">
-                        <td>{{item.productID}}</td>
-                        <td>{{item.productName}}</td>
-                        <td>{{item.categoryID}}</td>
-                        <td>{{item.categoryName}}</td>
+                        <td>{{item.id}}</td>
+                        <td>{{item.name}}</td>
+                        <!-- <td>{{item.categoryId}}</td> -->
+                        <td>{{item.category?.name}}</td>
                         <td class="d-flex justify-content-evenly">
                             <button type="button" class="btn btn-outline-green rounded-pill" (click)="editProduct(item)">Edit</button>
-                            <button type="button" class="btn btn-outline-green rounded-pill" (click)="deleteProduct(item.productID)">Delete</button>
+                            <button type="button" class="btn btn-outline-green rounded-pill" (click)="deleteProduct(item.id)">Delete</button>
                         </td>
                     </tr>
 
